chore(docs): swag init
