# docs/swagger.json
@@ -233,6 +233,178 @@
                 }
             }
         },
+        "/permissions": {
+            "get": {
+                "description": "Get all permissions",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "permissions"
+                ],
+                "summary": "Get permissions",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Items per page",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.BaseResponse-array_model_Permission"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a permission",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "permissions"
+                ],
+                "summary": "Create permission",
+                "parameters": [
+                    {
+                        "description": "request body for create a permission [RAW]",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.Createpermission"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/common.BaseResponse-any"
+                        }
+                    }
+                }
+            }
+        },
+        "/permissions/{id}": {
+            "get": {
+                "description": "Get permission detail by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "permissions"
+                ],
+                "summary": "Get Permission Detail By ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "permission ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.BaseResponse-model_Permission"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update a permission",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "permissions"
+                ],
+                "summary": "Update permission",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "permission ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "request body for update a permission [RAW]",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.Updatepermission"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/common.BaseResponse-any"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete permission by its id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "permissions"
+                ],
+                "summary": "Delete permission By ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "permission ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.BaseResponse-any"
+                        }
+                    }
+                }
+            }
+        },
         "/roles": {
             "get": {
                 "description": "Get all roles",
@@ -644,7 +816,27 @@
                     "type": "string"
                 },
                 "pagination": {
-                    "$ref": "#/definitions/common.Pagination"
+                    "$ref": "#/definitions/tools.Pagination"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "common.BaseResponse-array_model_Permission": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Permission"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "pagination": {
+                    "$ref": "#/definitions/tools.Pagination"
                 },
                 "status": {
                     "type": "integer"
@@ -664,7 +856,7 @@
                     "type": "string"
                 },
                 "pagination": {
-                    "$ref": "#/definitions/common.Pagination"
+                    "$ref": "#/definitions/tools.Pagination"
                 },
                 "status": {
                     "type": "integer"
@@ -681,7 +873,7 @@
                     "type": "string"
                 },
                 "pagination": {
-                    "$ref": "#/definitions/common.Pagination"
+                    "$ref": "#/definitions/tools.Pagination"
                 },
                 "status": {
                     "type": "integer"
@@ -698,7 +890,7 @@
                     "type": "string"
                 },
                 "pagination": {
-                    "$ref": "#/definitions/common.Pagination"
+                    "$ref": "#/definitions/tools.Pagination"
                 },
                 "status": {
                     "type": "integer"
@@ -715,7 +907,24 @@
                     "type": "string"
                 },
                 "pagination": {
-                    "$ref": "#/definitions/common.Pagination"
+                    "$ref": "#/definitions/tools.Pagination"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "common.BaseResponse-model_Permission": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/model.Permission"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "pagination": {
+                    "$ref": "#/definitions/tools.Pagination"
                 },
                 "status": {
                     "type": "integer"
@@ -732,29 +941,9 @@
                     "type": "string"
                 },
                 "pagination": {
-                    "$ref": "#/definitions/common.Pagination"
+                    "$ref": "#/definitions/tools.Pagination"
                 },
                 "status": {
-                    "type": "integer"
-                }
-            }
-        },
-        "common.Pagination": {
-            "type": "object",
-            "properties": {
-                "limit": {
-                    "type": "integer"
-                },
-                "offset": {
-                    "type": "integer"
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "total_data": {
-                    "type": "integer"
-                },
-                "total_page": {
                     "type": "integer"
                 }
             }
@@ -805,6 +994,17 @@
                 "username": {
                     "type": "string",
                     "example": "Budi Pambudi"
+                }
+            }
+        },
+        "dto.Createpermission": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
@@ -875,6 +1075,17 @@
                 }
             }
         },
+        "dto.Updatepermission": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.UserDTO": {
             "type": "object",
             "properties": {
@@ -912,6 +1123,20 @@
                 }
             }
         },
+        "model.Permission": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Role": {
             "type": "object",
             "properties": {
@@ -920,6 +1145,26 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "tools.Pagination": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "total_data": {
+                    "type": "integer"
+                },
+                "total_page": {
+                    "type": "integer"
                 }
             }
         }
